# gruppe32-ooprog18

./: .gitignore  CMakeLists.txt  CppProperties.json  Doxyfile  README.md  config.doxy  launch.vs.json
data/read/: read.md  seed-divisjon.yml  seed-idrettene.yml  seed-resultatene.yml  seed-spillerene.yml
data/read-write/: idrettene.yml  read-write.md
data/write/: write.md
document/: bemerkninger.md  codestandard.md  contact.md  format-data-idrettene.yml  format-data-spillerene.yml  format-divisjon.yml  format-idrettene.yml  format-input-divisjon.yml  format-input-resultatene.yml  format-resultatene-divisjon.yml  format-resultatene-idrett.yml  format-resultatene.yml  format-spillerene.yml  format-tabell-divisjon.yml  format-tabellene-idrett.yml  format-terminliste-divisjon.yml  format-terminliste.yml  format-toppscorerene-divisjon.yml  format-toppscorerene-lag.yml  format-view-idrett.yml  format-view-idrettene-full.yml  format-view-idrettene.yml  format-view-resultatene-divisjon.yml  format-view-resultatene-idrett.yml  format-view-spillerene.yml  format-view-tabell-divisjon.yml  format-view-tabellene-idrett.yml  format-view-terminliste.yml  format-view-toppscorerene-divisjon.yml  format-view-toppscorerene-lag.yml  log-onsdag-0314.md  log-onsdag-0321.md  log-onsdag-0411.md  log-sondag-0415.md  reference.md
include/frode/: ListTool2b.h
include/gruppe32/: App.hpp  DB.hpp  IO.hpp  Parser.hpp  Search.hpp  Terminal.hpp  Test.hpp  Valid.hpp
src/: App.cpp  DB.cpp  IO.cpp  ListTool2b.cpp  Parser.cpp  Search.cpp  Terminal.cpp  Valid.cpp  main.cpp
test/: test.cpp  test_Parser.cpp  test_Valid.cpp
